--- a/css/style.css
+++ b/css/style.css
@@ -198,14 +198,11 @@ header h1 {
 #logo img {display: block;}
 #logo {
 	margin: 0;padding: 0;
-	width: 200px;	/*ロゴ画像の幅*/
+	width: 50px;	/*ロゴ画像の幅*/
 }
 
 /*トップページのロゴ画像*/
-/* .home */
-
-
-#logo {
+.home #logo {
 	width: 300px;	/*ロゴ画像の幅*/
 	position: absolute;z-index: 1;
 	left: 50%;
