--- a/css/stylefordest.css
+++ b/css/stylefordest.css
@@ -1,3 +1,83 @@
+@charset "utf-8";
+
+
+/*Font Awesomeの読み込み
+---------------------------------------------------------------------------*/
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
+
+/*Google Fontsの読み込み
+---------------------------------------------------------------------------*/
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
+/*slick.cssの読み込み
+---------------------------------------------------------------------------*/
+@import url("https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css");
+
+/*テンプレート専用cssファイルの読み込み
+---------------------------------------------------------------------------*/
+@import url("slide.css");
+@import url("inview.css");
+
+
+/*CSSカスタムプロパティ（サイト全体を一括管理する為の設定）
+---------------------------------------------------------------------------*/
+:root {
+
+	--primary-color: #115f86;			/*テンプレートのメインまたはアクセントとなる色*/
+	--primary-inverse-color: #fff;		/*primary-colorの対として使う色*/
+
+	--primary-color-rgb: 17,95,134;	/*primary-colorをrgb数値にしたもの。個別に透明度を調整して使い回す為のものです。*/
+
+	--global-space: 3vw;				/*サイト内の余白の一括管理用。画面幅100%＝100vwです。*/
+}
+
+
+/*animation1のキーフレーム設定（開閉ブロックのアニメーションに使用）
+---------------------------------------------------------------------------*/
+@keyframes animation1 {
+	0% {left: -200px;}
+	100% {left: 0px;}
+}
+
+
+/*opa1のキーフレーム設定（汎用的）
+---------------------------------------------------------------------------*/
+@keyframes opa1 {
+	0% {opacity: 0;}
+	100% {opacity: 1;}
+}
+
+
+/*spinのキーフレーム設定（トップページの大きな円形の文字が回るアニメーション）
+---------------------------------------------------------------------------*/
+@keyframes spin {
+	0% {transform: rotate(0deg);}
+	100% {transform: rotate(360deg);}
+}
+
+
+/*全体の設定
+---------------------------------------------------------------------------*/
+body * {box-sizing: border-box;}
+
+html,body {
+	font-size: 13px;	/*基準となるフォントサイズ。*/
+}
+
+	/*画面幅900px以上の追加指定*/
+	@media screen and (min-width:900px) {
+
+		html, body {
+			font-size: 16px;	/*基準となるフォントサイズ。*/
+		}
+
+	}/*追加指定ここまで*/
+
+
+
+
+
 /*ヘッダー
 ---------------------------------------------------------------------------*/
 /*h1テキスト。このテンプレートでは、画面最上部の帯の左側に小文字で入れているテキストです。*/
