--- a/css/stylefordest.css
+++ b/css/stylefordest.css
@@ -76,6 +76,74 @@ html,body {
 
 
 
+/*リセット*/
+figure {margin: 0;}
+dd {margin: 0;}
+nav,ul,li,ol {margin: 0;padding: 0;}
+nav ul {list-style: none;}
+input {font-size: 1rem;}
+
+/*ul,ol*/
+ul,ol {margin-left: 1.5rem;margin-bottom: 1rem;}
+
+/*table全般の設定*/
+table {border-collapse:collapse;}
+
+/*画像全般の設定*/
+img {border: none;max-width: 100%;height: auto;vertical-align: middle;}
+
+/*videoタグ
+video {max-width: 100%;}*/
+
+/*iframeタグ*/
+iframe {width: 100%;}
+
+/*sectionが続く場合*/
+section + section {
+	margin-top: 8vw;	/*sectionの上に空けるスペース*/
+}
+
+
+/*リンク（全般）設定
+---------------------------------------------------------------------------*/
+a {
+	color: #333;		/*リンクテキストの色*/
+	transition: 0.3s;	/*マウスオン時の移り変わるまでの時間設定。0.3秒。*/
+}
+a:hover {
+	color: var(--primary-color);	/*文字色。css冒頭で指定しているprimary-colorを読み込みます*/
+	filter: brightness(1.2);		/*マウスオン時に少し明るくする*/
+}
+
+
+/*bg1背景
+---------------------------------------------------------------------------*/
+.bg1 {
+	background: url('../images/bg1.png') no-repeat center top / 100%;	/*画像の読み込み、リピートせず、左右中央に配置、上部に配置で幅100%で配置*/
+}
+
+
+/*bg2背景
+---------------------------------------------------------------------------*/
+.bg2 {
+	background:	url('../images/bg2.png') no-repeat left top / 100%;	/*画像の読み込み、リピートせず、左に配置、上部に配置で幅100%で配置*/
+}
+
+
+/*container
+---------------------------------------------------------------------------*/
+#container {
+	overflow-x: hidden;
+}
+
+
+/*contents
+---------------------------------------------------------------------------*/
+#contents {
+	padding: 6vw var(--global-space);	/*上下、左右へのボックス内の余白。左右はcss冒頭で指定しているglobal-spaceを読み込みます*/
+}
+
+
 
 
 /*ヘッダー
