--- a/css/stylefordest.css
+++ b/css/stylefordest.css
@@ -212,13 +212,415 @@ header h1 {
 	}/*追加指定ここまで*/
 
 
+/*header-top（headerの最上部の帯ブロック）
+---------------------------------------------------------------------------*/
+/*ブロック全体*/
+#header-top {
+	padding: 5px var(--global-space);		/*上下、左右へのボックス内の余白。左右はcss冒頭で指定しているglobal-spaceを読み込みます*/
+	background: var(--primary-color);		/*背景色。css冒頭で指定しているprimary-colorを読み込みます*/
+	color: var(--primary-inverse-color);	/*文字色。css冒頭で指定しているprimary-inverse-colorを読み込みます*/
+	display: flex;		/*直接の子要素を横並びにする。この場合はh1テキストと、言語ボックスが対象。*/
+	justify-content: space-between;	/*それぞれ両サイドに配置*/
+	font-size: 0.8rem;	/*文字サイズを80%に*/
+}
+
+	/*画面幅700px以下の追加指定*/
+	@media screen and (max-width:700px) {
+
+	/*ブロック全体*/
+	#header-top {
+		justify-content: flex-end;	/*h1テキストが非表示になり、言語ボックスが左によるので、右側にとどまるように指定を変更*/
+	}
+
+	}/*追加指定ここまで*/
+
+/*リンクテキスト*/
+#header-top a {
+	color: inherit;
+}
+
+/*メニューブロック初期設定
+---------------------------------------------------------------------------*/
+/*メニューをデフォルトで非表示*/
+#menubar {display: none;}
+#menubar ul {list-style: none;margin: 0;padding: 0;}
+
+/*上で非表示にしたメニューを表示させる為の設定*/
+.large-screen #menubar {display: block;}
+.small-screen #menubar.display-block {display: block;}
+
+/*3本バーをデフォルトで非表示*/
+#menubar_hdr.display-none {display: none;}
+
+/*ドロップダウンをデフォルトで非表示*/
+.ddmenu_parent ul {display: none;}
+
+/*ddmenuを指定しているメニューに矢印アイコンをつける設定*/
+a.ddmenu::before {
+	font-family: "Font Awesome 5 Free";
+	content: "\f078";		/*使いたいアイコン名（Font Awesome）をここで指定*/
+	font-weight: bold;		/*この手の設定がないとアイコンが出ない場合があります*/
+	font-size: 0.7rem;		/*文字サイズを70%に*/
+	padding-right: 0.5rem;	/*右側に空ける余白。0.5文字分。*/
+}
+
+
+/*大きな端末、小さな端末共通のメニューブロック設定
+---------------------------------------------------------------------------*/
+/*メニュー１個あたりの設定*/
+#menubar a {
+	display: block;text-decoration: none;
+}
+
+/*小文字の英語部分*/
+#menubar span {
+	display: block;
+	font-size: 0.7em;		/*文字サイズを親要素の70%に*/
+	letter-spacing: 0.1em;	/*文字間隔を少しだけ広くとる*/
+	opacity: 0.6;			/*透明度。色が60%出た状態。*/
+}
+
+
+/*大きな端末用のメニューブロック設定
+---------------------------------------------------------------------------*/
+/*メニューブロックを囲むボックス*/
+.large-screen #menubar {
+	flex: 1;
+}
+
+/*大きな端末では１番目メニュー（ホーム）を非表示にする*/
+.large-screen #menubar > nav > ul > li:nth-of-type(1) {
+	display: none;
+}
+
+/*メニューブロック全体の設定*/
+.large-screen #menubar > nav > ul {
+	display: flex;	/*メニューを横並びにする*/
+	justify-content: space-between;
+	align-items: center;
+}
+
+/*メニュー１個あたりの設定*/
+.large-screen #menubar li {
+	flex: 1;			/*個々のメニューを均等にし、幅いっぱいまで使う設定*/
+	position: relative;	/*ドロップダウンの幅となる基準を作っておく*/
+	text-align: center;	/*テキストをセンタリング*/
+}
+
+/*現在表示中メニュー（current）*/
+.large-screen #menubar li.current > a {
+	border-bottom: 2px solid var(--primary-color);	/*下線の幅、線種、varは色のことでcss冒頭で指定しているprimary-colorを読み込みます。。*/
+}
+
+/*トップページの3個目のメニューへの指定　※html側で順番をカウントして下さい。*/
+.home.large-screen #menubar > nav > ul > li:nth-of-type(3) {
+	margin-right: 150px;	/*右側に空けるスペース。ロゴに重ならないようにする為。*/
+}
+
+/*トップページの4個目のメニューへの指定　※html側で順番をカウントして下さい。*/
+.home.large-screen #menubar > nav > ul > li:nth-of-type(4) {
+	margin-left: 150px;		/*左側に空けるスペース。ロゴに重ならないようにする為。*/
+}
+
+/*リンク（a要素）の設定*/
+.large-screen #menubar li a {
+	padding: 0.8rem 0;	/*上下、左右の余白*/
+}
+
+
+/*大きな端末、小さな端末、共通のドロップダウンメニュー設定
+---------------------------------------------------------------------------*/
+/*ドロップダウンブロック*/
+.large-screen #menubar ul ul,
+.small-screen #menubar ul ul {
+	animation: opa1 0.5s 0.1s both;	/*0.1秒待機後、0.5秒かけてフェードイン表示*/
+}
+
+
+/*大きな端末用のドロップダウンメニュー
+---------------------------------------------------------------------------*/
+/*ドロップダウンメニューブロック全体*/
+.large-screen #menubar ul ul {
+	position: absolute;z-index: 2;
+	width: 100%;
+	top: 100%;
+	left: 0px;
+}
+
+/*ドロップダウンメニュー1個あたりの上下、左右への余白。*/
+.large-screen #menubar ul ul a {
+	padding: 0.6rem 1rem !important;	/*上下、左右へのメニュー内の余白*/
+	background: #fff;	/*背景色*/
+	margin: 3px 3px 0;	/*メニューの外側に空けるスペース。上、左右、下への順番。*/
+	border-radius: 5px;	/*角を丸くする指定*/
+	border: 1px solid #ccc;	/*枠線の幅、線種、色*/
+}
+
+/*マウスオン時*/
+.large-screen #menubar ul ul a:hover {
+	background: var(--primary-color);		/*背景色。css冒頭で指定しているprimary-colorを読み込みます*/
+	color: var(--primary-inverse-color);	/*文字色。css冒頭で指定しているprimary-inverse-colorを読み込みます*/
+}
+
+
+/*小さな端末用の開閉ブロック
+---------------------------------------------------------------------------
+/*メニューブロック設定*/
+.small-screen #menubar.display-block {
+	position: fixed;overflow: auto;z-index: 100;
+	left: 0px;top: 0px;
+	width: 100%;
+	height: 100%;
+	padding-top: 100px;	/*上に空ける余白。ハンバーガーアイコンと重ならない為の指定ですのでお好みで変更OK。*/
+	background: var(--primary-color) url('../images/bg_small_screen.png') no-repeat left bottom / 100vw;	/*背景色、背景画像の読み込み。画像は画面幅に合わせる*/
+	animation: animation1 0.2s both;		/*animation1を実行する。0.2sは0.2秒の事。*/
+	color: var(--primary-inverse-color);	/*文字色。css冒頭で指定しているprimary-inverse-colorを読み込みます*/
+}
+
+/*メニュー１個あたりの設定*/
+.small-screen #menubar li {
+	border: 1px solid #fff;	/*枠線の幅、線種、色*/
+	margin: 1rem;			/*メニューの外側に空けるスペース*/
+	border-radius: 5px;		/*角を丸くする指定*/
+}
+.small-screen #menubar a {
+	color: inherit;
+	padding: 1rem 3rem;		/*メニュー内の余白。上下、左右へ。*/
+}
+.small-screen #menubar li li a {
+	background: var(--primary-inverse-color);	/*背景色。css冒頭で指定しているprimary-inverse-colorを読み込みます*/
+	color: var(--primary-color);	/*文字色。css冒頭で指定しているprimary-colorを読み込みます*/
+}
+
+
+/*３本バー（ハンバーガー）アイコン設定
+---------------------------------------------------------------------------*/
+/*３本バーを囲むブロック*/
+#menubar_hdr {
+	animation: opa1 0.3s 0.5s both;
+	position: fixed;z-index: 101;
+	cursor: pointer;
+	top: 50px;		/*上からの配置場所*/
+	right: 2vw;		/*右からの配置場所*/
+	width: 50px;	/*幅*/
+	height: 50px;	/*高さ*/
+	padding: 15px;	/*ブロック内の余白*/
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: transform 0.5s;
+	background: rgba(0,0,0,0.6);	/*背景色*/
+}
+
+/*ここは変更不要*/
+#menubar_hdr div {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+/*バーの設定*/
+#menubar_hdr div span {
+	display: block;
+	width: 100%;
+	height: 2px;			/*線の太さ*/
+	background-color: #fff;	/*線の色*/
+	border-radius: 2px;		/*コーナーを少しだけ丸く*/
+	transition: all 0.5s ease-in-out;
+	position: absolute;
+}
+
+/*以下変更不要*/
+#menubar_hdr div span:nth-child(1) {top: 0;}
+#menubar_hdr div span:nth-child(2) {top: 50%;transform: translateY(-50%);}
+#menubar_hdr div span:nth-child(3) {bottom: 0;}
+#menubar_hdr.ham div span:nth-child(1) {top: 50%;transform: translateY(-50%) rotate(45deg);}
+#menubar_hdr.ham div span:nth-child(2) {opacity: 0;}
+#menubar_hdr.ham div span:nth-child(3) {top: 50%;transform: translateY(-50%) rotate(-45deg);}
+
+
+/*フッター共通
+---------------------------------------------------------------------------*/
+#footer-contents, #footermenu {
+	padding: 2rem var(--global-space);	/*上下、左右へのボックス内の余白。左右はcss冒頭で指定しているglobal-spaceを読み込みます*/
+}
+
+
+/*フッターのコンテンツ（住所やマップが入っているブロック）
+---------------------------------------------------------------------------*/
+/*ブロック全体*/
+#footer-contents {
+	background: rgba(var(--primary-color-rgb), 0.8) url('../images/bg_footer.png') no-repeat left bottom / auto 100%;	/*背景色はcss冒頭のvar(primary-color-rgb)を読み込み、0.8で透明度も指定。残りは背景画像の読み込み、リピートせず、左下に配置。高さ100%。*/
+	color: var(--primary-inverse-color);	/*文字色*/
+}
+#footer-contents a {
+	color: inherit;
+}
+
+/*左側のブロック*/
+#footer-contents .left {
+	margin-bottom: 50px;	/*下に空けるスペース*/
+}
+
+/*ブロック内で使うbtnの設定*/
+#footer-contents .btn a {
+	border: 2px solid var(--primary-inverse-color);	/*枠線の幅、線種、色。色についてはcss冒頭の（primary-inverse-color）を読み込みます。*/
+}
+
+	/*画面幅900px以上の追加指定*/
+	@media screen and (min-width:900px) {
+	
+	#footer-contents {
+		display: flex;	/*直接の子要素を横並びにします*/
+		gap: var(--global-space);	/*左右のボックスの間のマージン的な設定。css冒頭で指定しているglobal-spaceを読み込みます。*/
+	}
+	
+	/*左側のブロック*/
+	#footer-contents .left {
+		margin-bottom: 0;	/*下のマージン（外側への余白）をリセット*/
+		width: 50%;			/*幅。leftとrightで合計100になれば、お好みで変更してもらって構いません。*/
+	}
+	
+	/*右側のブロック*/
+	#footer-contents .right {
+		width: 50%;			/*幅。leftとrightで合計100になれば、お好みで変更してもらって構いません。*/
+	}
+
+	}/*追加指定ここまで*/
+
+
+/*footer-contents内のマップ。レスポンシブにする為のものなので、基本は編集不要です。
+---------------------------------------------------------------------------*/
+.iframe-box {
+	width: 100%;
+	height: 0;
+	padding-top: 56.25%;	/*マップの高さを増やしたい場合は、ここの数値を上げてみて下さい。*/
+	position: relative;
+	overflow: hidden;
+}
+.iframe-box iframe {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+}
+
+
+/*フッターメニュー設定
+---------------------------------------------------------------------------*/
+/*ボックス全体の設定*/
+#footermenu {
+	background: var(--primary-color);		/*背景色。css冒頭で指定しているprimary-colorを読み込みます*/
+	color: var(--primary-inverse-color);	/*文字色。css冒頭で指定しているprimary-inverse-colorを読み込みます*/
+	font-size: 0.8rem;		/*文字サイズ。*/
+	display: flex;			/*直接の子要素を横並びにします*/
+	justify-content: space-between;	/*並びかたの種類の指定*/
+	align-items: flex-start;		/*垂直揃えの指定。上に配置されるように。*/
+}
+
+/*ボックス内のリンクテキスト設定*/
+#footermenu a {
+	text-decoration: none;
+	color: inherit;
+}
+
+/*ulタグ（メニューの１列あたり）*/
+#footermenu ul {
+	margin: 0;list-style: none;
+	padding: 0 0.3em;
+	flex: 1;
+}
+
+/*メニューの見出し(title)*/
+#footermenu .title {
+	font-weight: bold;		/*太字にする*/
+	padding-bottom: 5px;	/*下に空けるスペース*/
+}
+
+
+/*フッター設定
+---------------------------------------------------------------------------*/
+small {font-size: 100%;}
+footer {
+	font-size: 0.7rem;		/*文字サイズ*/
+	background: #1d1b1b;	/*背景色*/
+	color: #fff;			/*文字色*/
+	text-align: center;		/*内容をセンタリング*/
+	padding: 1rem;			/*ボックス内の余白*/
+}
+
+/*リンクテキスト*/
+footer a {color: inherit;text-decoration: none;}
+
+/*著作部分*/
+footer .pr {display: block;}
+
+
+/*フッター内にあるソーシャルメディアのアイコン
+---------------------------------------------------------------------------*/
+ul.icons {
+	list-style: none;
+	margin: 0;padding: 0;
+	display: flex;
+	align-self: center;
+	gap: 1rem;	/*アイコン同士のマージン的な要素。１文字分。*/
+}
+.icons i {
+	font-size: 40px;	/*アイコンサイズ*/
+}
 
 
 
+/*PAGE TOP（↑）設定
+---------------------------------------------------------------------------*/
+.pagetop-show {display: block;}
+
+/*ボタンの設定*/
+.pagetop a {
+	display: block;text-decoration: none;text-align: center;z-index: 99;
+	position: fixed;	/*スクロールに追従しない(固定で表示)為の設定*/
+	right: 20px;		/*右からの配置場所指定*/
+	bottom: 20px;		/*下からの配置場所指定*/
+	color: #fff;		/*文字色*/
+	font-size: 1.5rem;	/*文字サイズ*/
+	background: rgba(0,0,0,0.2);	/*背景色。0,0,0は黒の事で0.2は色が20%出た状態。*/
+	width: 60px;		/*幅*/
+	line-height: 60px;	/*高さ*/
+	border-radius: 50%;	/*円形にする*/
+}
 
 
+/*その他
+---------------------------------------------------------------------------*/
+.clearfix::after {content: "";display: block;clear: both;}
+.color-check, .color-check a {color: #ff0000 !important;}
+.l {text-align: left !important;}
+.c {text-align: center !important;}
+.r {text-align: right !important;}
+.ws {width: 95%;display: block;}
+.wl {width: 95%;display: block;}
+.mb0 {margin-bottom: 0px !important;}
+.mb30 {margin-bottom: 30px !important;}
+.mb5vw {margin-bottom: 5vw !important;}
+.look {display: inline-block;padding: 0px 10px;background: #fff;color: #333;border: 1px solid #ccc; border-radius: 3px;margin: 5px 0; word-break: break-all;}
+.small {font-size: 0.75em;}
+.large {font-size: 2em; letter-spacing: 0.1em;}
+.pc {display: none;}
+.dn {display: none !important;}
+.block {display: block !important;}
 
+	/*画面幅900px以上の追加指定*/
+	@media screen and (min-width:900px) {
 
+	.ws {width: 48%;display: inline;}
+	.sh {display: none;}
+	.pc {display: block;}
+
+	}/*追加指定ここまで*/
 
 
 
