--- a/css/stylefordest.css
+++ b/css/stylefordest.css
@@ -686,7 +686,7 @@ li {
 
 
 /* li::before - チェックマーク (変更なし - li要素自体へのスタイルではないため影響なし) */
-li::before {
+.dsli::before 
     content: '✅';
     position: absolute;
     left: 0;
